--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         Webby Trivia
     </div>
 
+    <div class="logo">
+        <img src="src/tacocat_question.png"/>
+    </div>
+
     <div class="potatoest">
         <a href="instruction.html">
             Start
