End Screen - Updated Everything

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
 
     <div class="logo">
-        <img src="src/tacocat_question.png"/>
+        <img class="logo-pic" src="src/tacocat_question.png"/>
     </div>
 
     <div class="potatoest">
